# rust-webdev

./: Cargo.toml  README.md
src/: main.rs
src/handlers/: about.rs  index.rs  mod.rs
src/utils/: html_template.rs  mod.rs
templates/: about.html  index.html
templates/layout/: base.html
